objects/Community_Member__c.object
<CustomObject>
    <description>A Community Member represents an individual user registered on the community. A Community Member will be created in Salesforce if a Contact can be matched by its email to an inSided community user.</description>
    <label>Community Member</label>
    <nameField>
        <label>Community Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>UserId__c</fullName>
        <description>The User ID is the unique identifier for an inSided User account.</description>
        <externalId>true</externalId>
        <inlineHelpText>The User ID is the unique identifier for an inSided User account.</inlineHelpText>
        <label>UserId</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Community Members are matched to an Account based on the Contact lookup.</description>
        <inlineHelpText>Community Members are matched to an Account based on the Contact lookup.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Members</relationshipLabel>
        <relationshipName>Community_Members_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Community Members are matched to a Contact based on email address.</description>
        <inlineHelpText>Community Members are matched to a Contact based on email address.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Members</relationshipLabel>
        <relationshipName>Community_Members_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Replies__c</fullName>
        <description>The total number of replies posted by a user (includes replies to any and all content types).</description>
        <inlineHelpText>The total number of replies posted by a user (includes replies to any and all content types).</inlineHelpText>
        <label>Replies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <description>Testing adding field via soap API.</description>
        <label>TestField</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_posts__c</fullName>
        <description>The total number of posts this user has made on the community.</description>
        <formula>((Conversations_started__c + Ideas_submitted__c)- Ideas_submitted__c) + Article_replies__c + Questions_asked__c + Conversation_replies__c + Question_replies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total number of posts this user has made on the community.</inlineHelpText>
        <label>Total posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_visits__c</fullName>
        <description>The total number of visits this user has made to the community.</description>
        <inlineHelpText>The total number of visits this user has made to the community.</inlineHelpText>
        <label>Total visits</label>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Community visited</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_post_date__c</fullName>
        <description>The last time this user posted on the community.</description>
        <inlineHelpText>The last time this user posted on the community.</inlineHelpText>
        <label>Last post date</label>
        <summarizedField>Community_Member_Activity__c.Activity_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>notEqual</operation>
            <value>Community visited</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>notContain</operation>
            <value>liked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>notContain</operation>
            <value>voted</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Article_replies__c</fullName>
        <description>The total number of replies this user has added to articles.</description>
        <inlineHelpText>The total number of replies this user has added to articles.</inlineHelpText>
        <label>Article replies</label>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Article replied</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ideas_submitted__c</fullName>
        <description>The total number of ideas submitted by this user.</description>
        <inlineHelpText>The total number of ideas submitted by this user.</inlineHelpText>
        <label>Ideas submitted</label>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Idea submitted</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_visit_date__c</fullName>
        <description>The last time this user visited the community.</description>
        <inlineHelpText>The last time this user visited the community.</inlineHelpText>
        <label>Last visit date</label>
        <summarizedField>Community_Member_Activity__c.Activity_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Community visited</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Questions_asked__c</fullName>
        <description>The total number of questions asked by this user.</description>
        <inlineHelpText>The total number of questions asked by this user.</inlineHelpText>
        <label>Questions asked</label>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Question Asked</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Question_replies__c</fullName>
        <description>The total number of replies this user has added to questions.</description>
        <inlineHelpText>The total number of replies this user has added to questions.</inlineHelpText>
        <label>Question replies</label>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Question replied</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registration_date__c</fullName>
        <description>The date this user registered their community account</description>
        <inlineHelpText>The date this user registered their community account</inlineHelpText>
        <label>Registration date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conversation_replies__c</fullName>
        <description>The total number of replies this user has added to conversations.</description>
        <inlineHelpText>The total number of replies this user has added to conversations.</inlineHelpText>
        <label>Conversation replies</label>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Conversation replied</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conversations_started__c</fullName>
        <description>The total number of conversations started by this user.</description>
        <inlineHelpText>The total number of conversations started by this user.</inlineHelpText>
        <label>Conversations started</label>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>equals</operation>
            <value>Conversation started</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_ideation_interaction_date__c</fullName>
        <description>The last time this user submitted or voted for an idea on the community.</description>
        <inlineHelpText>The last time this user submitted or voted for an idea on the community.</inlineHelpText>
        <label>Last ideation interaction date</label>
        <summarizedField>Community_Member_Activity__c.Activity_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Community_Member_Activity__c.Name</field>
            <operation>contains</operation>
            <value>Idea</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>